<resources>
    <string name="app_name">FIDI Laundry</string>
    <string name="font_name_fontawesome">fontawesome</string>
    <string name="font_name_avenir">avenir</string>
    <string name="font_name_dmsans">dmsans</string>
    <string name="font_name_montserrat">Montserrat</string>
    <string name="font_name_source_sf">SF</string>
    <string name="action_about">About</string>
    <string name="alert_title">Attention!</string>
    <string name="alert_message">Unable to load data. \nCheck your connection!</string>
    <string name="alert_positive">Close</string>
    <string name="video">Video</string>
    <string-array name="stepLabels">
        <item>Identitas Diri</item>
        <item>Penghasilan</item>
        <item>Tempat Bekerja</item>
        <item>Informasi Lain</item>
    </string-array>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="country_prompt">Pilih Biro Travel</string>
    <string-array name="country_arrays">
        <item>- Pilih Travel -</item>
        <item>Abi Umi Tours</item>
        <item>Garuda Tours</item>
    </string-array>
    <string-array name="embarkasi">
        <item>- Pilih Embarkasi -</item>
        <item>Surabaya</item>
        <item>Solo</item>
        <item>Jakarta</item>
    </string-array>
    <string-array name="kliring">
        <item>- Pilih Biro Kliring -</item>
        <item>KBI</item>
        <item>POS</item>
    </string-array>
    <string-array name="posgo">
        <item>Giro - 123456</item>
    </string-array>
    <string-array name="rdn">
        <item>RDN - 654321</item>
    </string-array>
    <string-array name="scheduleFleet">
        <item>- Jadwal Kloter -</item>
    </string-array>
    <string-array name="airports">
        <item>- Nama Bandara -</item>
    </string-array>
    <string-array name="kyc">
        <item>Confirmed</item>
        <item>Dispatched</item>
        <item>Arrived</item>
        <item>Delivered</item>
        <item>Reviewed</item>
        <item>Reviewed</item>
        <item>Reviewed</item>
    </string-array>
    <string name="cancel_pf">Cancel</string>
    <string name="use_pin_pf">Use pin</string>
    <string name="sign_in_pf">Sign in</string>
    <string name="ok_pf">OK</string>
    <string name="next_pf">Next</string>
    <string name="forgot_pf">Forgot?</string>
    <string name="lock_screen_title_pf">Input Security Code</string>
    <string name="settings_pf">Settings</string>
    <string name="no_fingerprints_message_pf">No fingerprints found. Please add fingerprints in the settings if you want to use this authorization method."</string>
    <string name="no_fingerprints_title_pf">"No fingerprints found"</string>
    <string name="fingerprint_not_recognized_pf">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success_pf">Fingerprint recognized</string>
    <string name="fingerprint_description_pf">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint_pf">Touch sensor</string>
    <string name="description_fingerprint_icon_pf">Fingerprint icon</string>
    <string name="fingerprint_desc">Use Fingerprint to authorise payments</string>
    <string name="fingerprint_desc2">Use Fingerprint to authorise payments</string>
    <string name="loadingWithThreeDots">Loading…</string>
    <string name="retryWithThreeDots">Retry…</string>
    <string name="noData">Oops... There isn\'t any %1$s yet.</string>
    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">Mei</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>
    <string name="about_metalgo">About MetalGo</string>
    <string name="about_us">About Us</string>
    <string name="account">Account</string>
    <string name="account_destination_id">Destination Account ID</string>
    <string name="account_destination_name">Destination Account Name</string>
    <string name="account_sender_id">Sender Account ID</string>
    <string name="account_sender_name">Sender Name</string>
    <string name="account_type">Account Type</string>
    <string name="account_type_desc">Select your account type</string>
    <string name="account_name">Account Name</string>
    <string name="account_not_found">Account Not Found</string>
    <string name="account_no_destination">Destination Account</string>
    <string name="account_number">Account Number</string>
    <string name="account_registered">Email, username, or phone number has been used</string>
    <string name="account_security">Account Security</string>
    <string name="account_security_desc">For account security, you need to set a PIN.</string>
    <string name="account_balance_his">Account Balance History</string>
    <string name="activity">Activity</string>
    <string name="activate">Activate</string>
    <string name="activate_metalpay">Activate MetalPay</string>
    <string name="activation_metalpay">MetalPay Activation</string>
    <string name="activation_metalpay_desc">Your MetalPay account successfully linked with M-Bayar (E2Pay)</string>
    <string name="activation_metalpay_feature">Now you can use this features</string>
    <string name="activation_success">Activation Success</string>
    <string name="address">Address</string>
    <string name="address_only">Address</string>
    <string name="advantages_posgo">METALGO ADVANTAGES</string>
    <string name="advertisement">Advertisement</string>
    <string name="add_signature_first">Add your signature first</string>
    <string name="agree">Agree</string>
    <string name="agreeing_register">I agree with the Terms of Service and Privacy Policy*</string>
    <string name="agreeing_welcome">By logging in or registering, you agree to our</string>
    <string name="all">All</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="and_with_space">&#032;and&#032;</string>
    <string name="annual_income">Annual Income</string>
    <string name="annual_income_desc">Select your income range in a year</string>
    <string name="another_transaction">See More</string>
    <string name="another_transaction_2">MetalPay Transactions</string>
    <string name="apply">Apply</string>
    <string name="apply_for_cancellation">Apply for Cancellation</string>
    <string name="apply_for_changes">Apply for Changes</string>
    <string name="ask_another_question">ASK ANOTHER QUESTION</string>
    <string name="attachment">Attachment</string>
    <string name="available_amount">Available Amount:</string>
    <string name="available_date">Available %1$s departure date</string>
    <string name="authorize">Authorize</string>
    <string name="a_agreement_1">I certify that I have read, understood, and understood the contents of the mandate document</string>
    <string name="a_agreement_2">I state that I have simulated transactions and have understood the procedures for transacting in commodity futures trading</string>
    <string name="a_agreement_3">I hereby agree that all attached data that I have filled in are true and in accordance with applicable regulations</string>
    <string name="a_agreement_4">I stated that all of the data i fill in is my own data and is correct</string>
    <string name="amount">Amount</string>
    <string name="amount_balance">Amount Balance</string>
    <string name="back">Back</string>
    <string name="back_to_package">Back to Package Details</string>
    <string name="bad_agreement">I hereby agree that all customer account data that I fill in is true and in accordance with applicable regulations</string>
    <string name="bad_agreement_1">I certify that I have read, understood, and understood the contents of the RPED (Digital Gold Participant Account) Terms &amp; Conditions</string>
    <string name="bad_agreement_2">I certify that I have read, understood, and understood the contents of the Tabungan Icon</string>
    <string name="balance">Balance</string>
    <string name="balance_cash">Cash Balance</string>
    <string name="balance_gold">Gold Balance</string>
    <string name="balance_giro">Giro Balance</string>
    <string name="balance_rdk">RPED Balance</string>
    <string name="balance_rtp">RPED Balance</string>
    <string name="balance_premium">Premium Gold Balance</string>
    <string name="balance_kau">KAU Gold Balance</string>
    <string name="balance_available_trade">Available Trade Balance</string>
    <string name="balance_account">Account Balance</string>
    <string name="balance_reserved">Reserved Balance</string>
    <string name="balance_credit_llimit">Credit Limit</string>
    <string name="balance_available_credit">Available Credit</string>
    <string name="balance_settle_owning">Settlement Owning</string>
    <string name="bankrupt_question">Have you been stated as bankrupt by the court?</string>
    <string name="bankrupt_question_desc">If you have been stated as bankrupt by the court, we need your broker for your registration.</string>
    <string name="banks_name">Bank’s Name</string>
    <string name="bank_account_data">Bank Account Data</string>
    <string name="bank_branch_office">Bank Branch Office</string>
    <string name="bank_branch_office_desc">Select Bank Branch Office for RPED Account</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="bank_destination">Bank Destination</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="forgot_pass_">Forgot Password?</string>
    <string name="hai_welcome">Hi, Welcome!</string>
    <string name="login">Login</string>
    <string name="login_title">Login</string>
    <string name="login_desc">Please fill in your registered email /phone number / username below!</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="user_email_phone">Email / Phone Number / Username</string>
</resources>